  greater control via additional optional arguments
- Add new functions, digamma, kdensity, monthlen and
  epochday (the latter two are calendrical) 
- Add new built-in constant: "macheps" gets the
  machine precision
- OS X package: add icons and associations for gretl data,
  script and session files
- Fix bug: crash on exact collinearity when estimating a
  system of equations
- Fix bug: errors in Exponential Moving Average in GUI
- Fix bug: non-ASCII characters not handled in function
  package upload to server
- Fix bug: double normal cdf did not handle correctly some 
  corner cases
- Fix bugs 2944000, 2956109
- Fix font-encoding issues on MS Windows: session-names
  with non-ASCII characters were not appearing in the gretl
  title bar; and the encoding was getting broken between
  copy and paste, e.g. in script windows
- Fix bug in Hausman test after tsls: ensure the sample size 
  is consistent
- Graphing via gnuplot: require version >= 4.2.0

01/24/2010 version 1.8.7
- GUI enhancement: add apparatus to help keep track of
  gretl windows
- GUI menus: clean-up and consolidation
- New command: "qqplot" (Quantile-Quantile plots)
- Normal random samples: implement the Ziggurat method
- "dataset" command: document the "clear" keyword
- "rmplot" command: save $test and $pvalue
- "restrict" with --bootstrap option: record $test and
  $pvalue
- "corrgm" and "xcorrgm": allow the lag order to be
  given as a named scalar variable
- VECMs: add $ec accessor
- VARs: remove $vcv accessor
- VARs and VECMs: enable accessors $df, $ncoeff and $xtxinv
- BFGSmax function: add facility for supplying analytical
  derivatives
- Eviews data importer: handle more cases of .wf1 files
- BFGS: make the degree of verbosity tunable via "set
  bfgs_verbskip"
- Fix bug: crash on error in user_matrix_ols()
- Fix bug: "append" for data should work in more cases
- Fix bug: saving a model when there is already a saved
  model of the same name (in the GUI) caused a crash