@@ -36,6 +36,8 @@ version 1.9.0, in progress
   script and session files
 - Fix bug: crash on exact collinearity when estimating a
   system of equations
+- Fix bug: broken test output in tsls when the matrix of
+  instruments is near to rank-deficient
 - Fix bug: errors in Exponential Moving Average in GUI
 - Fix bug: non-ASCII characters not handled in function
   package upload to server
